--- a/.npmrc
+++ b/.npmrc
@@ -1,8 +1,8 @@
-# Use public npm registry for @shendu-ui scope
-# @shendu-ui:registry=https://registry.npmjs.org
-
 # Always use package-lock.json
 package-lock=true
 
 # Exact versions for reproducible builds
 save-exact=true
+
+# npm auth token (reads from NPM_TOKEN environment variable)
+//registry.npmjs.org/:_authToken=${NPM_TOKEN}
