--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
     "release": "changeset publish"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "1.1.11",
+    "@radix-ui/react-dropdown-menu": "2.1.16",
     "@radix-ui/react-slot": "1.2.4",
     "class-variance-authority": "0.7.1",
     "clsx": "^2.1.1",
@@ -121,7 +123,7 @@
     "glob": "^13.0.0",
     "globals": "^16.5.0",
     "jsdom": "^27.3.0",
-    "lucide-react": "^0.559.0",
+    "lucide-react": "0.559.0",
     "playwright": "^1.57.0",
     "prettier": "3.7.4",
     "prettier-plugin-tailwindcss": "0.7.2",
