--- a/package.json
+++ b/package.json
@@ -74,9 +74,13 @@
     "test:e2e:update": "playwright test --update-snapshots",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
+    "quality": "npm run lint && npm run format:check",
+    "quality:fix": "npm run lint:fix && npm run format",
     "validate": "npm run type-check && npm run lint && npm run test:run",
     "prepublishOnly": "npm run validate && npm run build:lib",
-    "release": "changeset publish"
+    "release": "changeset publish",
+    "prepare": "husky",
+    "commitlint": "commitlint --edit"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "1.1.11",
@@ -99,6 +103,8 @@
   "devDependencies": {
     "@changesets/cli": "^2.29.8",
     "@chromatic-com/storybook": "^4.1.3",
+    "@commitlint/cli": "20.2.0",
+    "@commitlint/config-conventional": "20.2.0",
     "@eslint/js": "^9.39.1",
     "@playwright/test": "^1.57.0",
     "@storybook/addon-a11y": "^10.1.6",
@@ -117,12 +123,18 @@
     "@vitest/browser-playwright": "^4.0.15",
     "@vitest/coverage-v8": "^4.0.15",
     "eslint": "^9.39.1",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-import": "2.32.0",
+    "eslint-plugin-prettier": "5.5.4",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "eslint-plugin-storybook": "^10.1.6",
+    "eslint-plugin-unused-imports": "4.3.0",
     "glob": "^13.0.0",
     "globals": "^16.5.0",
+    "husky": "9.1.7",
     "jsdom": "^27.3.0",
+    "lint-staged": "16.2.7",
     "lucide-react": "0.559.0",
     "playwright": "^1.57.0",
     "prettier": "3.7.4",
@@ -137,5 +149,14 @@
     "vite": "^7.2.4",
     "vite-plugin-dts": "^4.5.4",
     "vitest": "^4.0.15"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md,css,scss,html}": [
+      "prettier --write"
+    ]
   }
 }
