--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-org/shendu-ui.git"
+    "url": "https://github.com/vitaliiverdiiev-dev/shendu-ui.git"
   },
   "bugs": {
-    "url": "https://github.com/your-org/shendu-ui/issues"
+    "url": "https://github.com/vitaliiverdiiev-dev/shendu-ui/issues"
   },
-  "homepage": "https://github.com/your-org/shendu-ui#readme",
+  "homepage": "https://vitaliiverdiiev-dev.github.io/shendu-ui/",
   "keywords": [
     "react",
     "ui",
